# simple-llvm-project

./: .gitignore  CMakeLists.txt  README.md
llvm/: CMakeLists.txt  main.cpp
llvm/benchmarks/: CMakeLists.txt
llvm/include/: CMakeLists.txt
llvm/include/llvm-c/: DataTypes.h  Deprecated.h  Error.h  ExternC.h  Types.h  Visibility.h
llvm/include/llvm/Config/: llvm-config.h
